fix overflow hidden

--- a/css/style.scss
+++ b/css/style.scss
@@ -415,6 +415,7 @@ body {
   .issue {
     padding-top: 93px;
     .wrap-issue {
+      overflow: hidden;
       .group-issue {
         padding-inline: 37px;
         display: flex;
